# watchtower-demo

./: .env  .env.example  .gitignore  Dockerfile  README.md  chatgpt.md  close-server-simulation-implementation-plan-mac-first.md  close-server-simulation-implementation-plan.md  composer.md  docker-compose.yml  gemini.md  generate_ueba_scenarios.py  git-auto-mac.sh  git-auto.sh  integration_planning.md  pyproject.toml  sentinel-ueba-integration-prep.md  sentinel-yeni-urun-konusma.md  watchtower-features-final.md  watchtower-hardening-prompts.md  watchtower-implementation-prompts.md  watchtower-master-plan.md  watchtower-product-decisions.md  watchtower-roles-and-access.md  watchtower-scenarios-final.md  watchtower-tool-stack.md  whatisthis.md
docs/: install.md  operations.md  production-readiness-report.md
reports/soak/: short_soak_health.json  short_soak_metrics.json  short_soak_readiness.json  short_soak_summary.json
reports/watchtower/: e2e_summary.json  (+3 more)
scripts/: docker-entrypoint.sh  fresh_install.sh  generate_feature_taxonomy.py  soak_24h.sh  soak_prepare_f001.py  soak_report.py  soak_short.sh  upgrade.sh
server-stack/: .env.example  .gitignore  IMPLEMENTATION_HISTORY.md  Makefile  README.md  close-server-simulation-implementation-plan-mac-first.md  close-server-simulation-implementation-plan.md  docker-compose.yml  pytest.ini  real-company-tool-integration-plan.md  watchtower-features-final.md  watchtower-scenarios-final.md  watchtower-tool-stack.md
tests/: conftest.py
watchtower/: __init__.py
watchtower.egg-info/: SOURCES.txt  requires.txt
(+1895 files in other folders)
