[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "watchtower"
version = "0.1.0"
description = "Watchtower UEBA product"
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["watchtower*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
